# poll-api

./: .gitignore  Cargo.toml  sample.env
curl/: post-poll  post-vote
migrations/: 20230827160727_initial_migration.sql
src/: background_tasks.rs  main.rs  models.rs
src/routes/: mod.rs  option.rs  poll.rs
